# therundown-python

./: README.md  mkdocs.yml  pyproject.toml
.circleci/: config.yml
docs/: index.md
docs/code-reference/: resources.md  rundown.md
rundown/: __init__.py  rundown.py  usercontext.py  utils.py
rundown/resources/: date.py  event.py  events.py  line.py  lineperiods.py  schedule.py  sport.py  sportsbook.py  team.py  validators.py
rundown/static/: sports.py  sports.yaml  sportsbooks.py  sportsbooks.yaml  static.py
tests/: conftest.py  test_api.py  test_rundown.py  test_static.py  test_utils.py
tests/cassettes/: TestAPI.test_bad_event_date_returns_todays_lines[closing_lines].yaml  TestAPI.test_bad_event_date_returns_todays_lines[events].yaml  TestAPI.test_bad_event_date_returns_todays_lines[opening_lines].yaml  TestAPI.test_cfl_not_implemented[CFL-2019-11-24-0].yaml  TestAPI.test_cfl_not_implemented[NHL-2019-10-02-4].yaml  TestAPI.test_dates_always_has_UTC_time.yaml  TestAPI.test_dates_by_sport_always_has_UTC_time.yaml  TestAPI.test_dates_by_sport_epoch_is_shifted.yaml  TestAPI.test_dates_epoch_is_shifted.yaml  TestAPI.test_events_all_periods_scores[closing_lines].yaml  TestAPI.test_events_all_periods_scores[events].yaml  TestAPI.test_events_all_periods_scores[opening_lines].yaml  TestAPI.test_events_default_is_scores[closing_lines].yaml  TestAPI.test_events_default_is_scores[events].yaml  TestAPI.test_events_default_is_scores[opening_lines].yaml  TestAPI.test_lines_all_periods_scores[moneyline].yaml  TestRundown.test_bad_dates[0-foobar].yaml  (+220 more)
therundown/: config.py
(+227 files in other folders)
